<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ReaStreamMobile</string>
    <string name="server_ip_port">Server IP:PORT</string>
    <string name="server_ip_port_initialText">0.0.0.0</string>
    <string name="connectReceiverSwitchLabel">Rx</string>
    <string name="connectTransmitterSwitchLabel">Tx</string>
    <string name="reastream_identifier_label">Reastream Identifier Label</string>
    <string name="control_url">http://rc.reaper.fm/ReaperWebControl/</string>
    <string name="control_url_hint">Control URL</string>
    <string name="inputDeviceListView_Default">---</string>
    <string name="outputDeviceListView_Default">---</string>
    <string-array name="defaultInputDeviceList">
        <item>Default Input</item>
    </string-array>
    <string-array name="defaultOuputDeviceList">
        <item>Default Output</item>
    </string-array>

</resources>