<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- IP & Port to the Reaper Server-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serverIP_portInputView_profile1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/switchConnect_profile1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/server_ip_port"
            android:inputType="textUri"
            android:text="0.0.0.0"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--  Control switch  -->
    <Switch
        android:id="@+id/switchConnect_profile1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:checked="false"
        android:minHeight="48dp"
        android:onClick="onSwitchToggleCb"
        android:text="@string/connectLabel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/serverIP_portInputView_profile1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/serverIP_portInputView_profile1"
        app:layout_constraintTop_toTopOf="@+id/serverIP_portInputView_profile1"
        tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />


    <!--  Reastream label  -->
    <EditText
        android:id="@+id/reastreamLabelInputView_profile1"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/reastream_identifier_label"
        android:inputType="text"
        android:minHeight="48dp"
        android:onClick="onReaStreamLabelChangeCb"
        android:text="@string/reastream_identifier_label"
        app:layout_constraintEnd_toEndOf="@+id/switchConnect_profile1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/serverIP_portInputView_profile1"
        app:layout_constraintTop_toBottomOf="@+id/serverIP_portInputView_profile1" />


    <Spinner
        android:id="@+id/outputDeviceListView_profile1"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/outputDeviceListView_Default"
        app:layout_constraintEnd_toStartOf="@+id/inputDeviceListView_profile1"
        app:layout_constraintStart_toStartOf="@+id/reastreamLabelInputView_profile1"
        app:layout_constraintTop_toBottomOf="@+id/reastreamLabelInputView_profile1" />

    <Spinner
        android:id="@+id/inputDeviceListView_profile1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/inputDeviceListView_Default"
        app:layout_constraintBottom_toBottomOf="@+id/outputDeviceListView_profile1"
        app:layout_constraintEnd_toEndOf="@+id/reastreamLabelInputView_profile1"
        app:layout_constraintStart_toEndOf="@+id/outputDeviceListView_profile1"
        app:layout_constraintTop_toTopOf="@+id/outputDeviceListView_profile1" />

    <!--  WebView for the server control mixer or the SubMix mixer  -->
    <EditText
        android:id="@+id/webControlURLinputView_profile1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/control_url"
        android:ems="10"
        android:hint="@string/control_url_hint"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:onClick="onControlURLChangeCb"
        android:text="@string/control_url"
        app:layout_constraintEnd_toEndOf="@+id/switchConnect_profile1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/serverIP_portInputView_profile1"
        app:layout_constraintTop_toBottomOf="@+id/outputDeviceListView_profile1" />

    <WebView
        android:id="@+id/webControlView_profile1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </WebView>

</androidx.constraintlayout.widget.ConstraintLayout>